manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-server-deployment
  labels:
    app.kubernetes.io/name: cv-yolo-server
spec:
  replicas: .3
  selector:
    matchLabels:
      app.kubernetes.io/name: cv-yolo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cv-yolo-server
    spec:
      containers:
      - name: yolo-server-pod 
        image: mlvc/yolo-server:latest
        name: yolo-server
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "2048Mi"
            cpu: "8"
          limits:
            memory: "2048Mi"
            cpu: "8"
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-server-service
spec:
  selector:
    app.kubernetes.io/name: cv-yolo-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: yolo-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20M
    nginx.ingress.kubernetes.io/proxy-buffer-size: 10M
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 10M
    nginx.ingress.kubernetes.io/proxy-body-size: 20M
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: demo-image.ipv6.polito.it
      http:
        paths:
        - path: /
          backend:
            serviceName: yolo-server-service
            servicePort: 5000
  tls:
  - hosts:
    - demo-image.ipv6.polito.it
